# audiotest

./: DESCRIPTION  NAMESPACE
R/: extendr-wrappers.R
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: decode_symphonia.rs  lib.rs  misc.rs  play_audio.rs  temp.rs  tests.R
tests/: tests.R
