[package]
name = 'audiotest'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'audiotest'

[dependencies]
extendr-api = { version = '0.3.1', features = ["ndarray", "num-complex"] }
ndarray = '0.15.6'
symphonia = '0.5.1'
cpal = '0.14.0'
num = '0.4.0'
num-complex = '0.4.1'
